updated stylesheet and html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" type="text/css" rel="stylesheet" >
     <link href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -15,8 +15,8 @@
 <body>
     <main id = "main">
         <div id="title" >
-            <h1> Koby Bryant </h1>s
-            <p> These young guys are playing checkers. <br/>I'm out there playing chess.            </p>
+            <h1> Koby Bryant </h1>
+            <q> These young guys are playing checkers. I'm out there playing chess.            </q>
         </div>
         <div id="img-div">
             <img id="image" src="https://media.npr.org/assets/img/2020/01/26/gettyimages-102186435-4934bd5ad7673c5d0746f0515849ef826a391164-s1100-c15.jpg" alt="Kobe iconic pose ">
