--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
-    <title>Koby Bryant </title>
+    <title>Kobe Bryant </title>
 </head>
 <body>
     <main id = "main">
         <div id="title" >
-            <h1> Koby Bryant </h1>
+            <h1> Kobe Bryant </h1>
             <q> These young guys are playing checkers. I'm out there playing chess.            </q>
         </div>
         <div id="img-div">
@@ -24,7 +24,7 @@
             <figcaption id="img-caption">June 17, 2010 • NBA Finals</figcaption>
         </div>
         <div id="tribute-info">
-           <p id="tributeCaption">Here's a time line of Koby Bryant:  </p> 
+           <p id="tributeCaption">Here's a time line of Kobe Bryant:  </p> 
            <ul>
                <li><b>1978</b> - Bryant was born on August 23 1978</li>
                <li><b>1996</b> - Drafted 13th by the Charlotte Hornets. Few days after was traded to the Lakes. </li>
